--- a/app/views/home/sections/_partners.html.erb
+++ b/app/views/home/sections/_partners.html.erb
@@ -40,33 +40,33 @@
 <!--          </p>-->
 <!--        </div>-->
 <!--      </div>-->
-      <div class="col-md-5 col-md-offset-1 col-sm-12 text-center">
-        <div class="service-box">
-          <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-          <h4>
-            In Partnership with
-          </h4>
-          <div class="details-pic">
-            <%= image_tag asset_url("non-event.jpg") %>
-          </div>
-          <p class="text-muted partner-link">
-            <a href="http://nonevent.org/">
-              Non-Event
-            </a>
-          </p>
-          <p>
-            Non-Event is a Boston-based concert series devoted to the presentation of the finest in experimental,
-            abstract, improvised, and new music from New England and around the world. founded in 2001, Non-Event has
-            presented over 260 concerts in and around Boston in a wide variety of venues from coffee shops, galleries,
-            and loft spaces to former movie palaces, university lecture halls, museums, night clubs, 19th-century
-            ballrooms, a Victorian-era pumping station, and inside Boston's iconic City Hall. in addition to working
-            with numerous venues and organizations over the past 15 years, Non-Event organizes a longstanding series of
-            informal monthly coffee house concerts featuring local musicians and sound artists, held at Café Fixe in
-            Brookline and made possible in part by the Brookline Commission for the Arts.
-          </p>
-        </div>
-      </div>
-      <div class="col-md-5 col-sm-12 text-center">
+<!--      <div class="col-md-5 col-md-offset-1 col-sm-12 text-center">-->
+<!--        <div class="service-box">-->
+<!--          <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>-->
+<!--          <h4>-->
+<!--            In Partnership with-->
+<!--          </h4>-->
+<!--          <div class="details-pic">-->
+            <%#= image_tag asset_url("non-event.jpg") %>
+<!--          </div>-->
+<!--          <p class="text-muted partner-link">-->
+<!--            <a href="http://nonevent.org/">-->
+<!--              Non-Event-->
+<!--            </a>-->
+<!--          </p>-->
+<!--          <p>-->
+<!--            Non-Event is a Boston-based concert series devoted to the presentation of the finest in experimental,-->
+<!--            abstract, improvised, and new music from New England and around the world. founded in 2001, Non-Event has-->
+<!--            presented over 260 concerts in and around Boston in a wide variety of venues from coffee shops, galleries,-->
+<!--            and loft spaces to former movie palaces, university lecture halls, museums, night clubs, 19th-century-->
+<!--            ballrooms, a Victorian-era pumping station, and inside Boston's iconic City Hall. in addition to working-->
+<!--            with numerous venues and organizations over the past 15 years, Non-Event organizes a longstanding series of-->
+<!--            informal monthly coffee house concerts featuring local musicians and sound artists, held at Café Fixe in-->
+<!--            Brookline and made possible in part by the Brookline Commission for the Arts.-->
+<!--          </p>-->
+<!--        </div>-->
+<!--      </div>-->
+      <div class="col-md-6 col-md-offset-3 col-sm-12 text-center">
         <div class="service-box">
           <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
           <h4>
